Fixed some layout issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,11 @@
 
 .react-course-player__header {
   width: 100%;
-  height: 50px;
+  padding: 10px 20px;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .react-course-player__body {
@@ -76,4 +80,13 @@ background-color: #2B7A78;
 .react-course-player__lesson {
   width: 100%;
   padding: 1rem;
+  cursor: pointer;
+}
+
+.react-course-player__lesson:hover {
+  opacity: 0.7;
+}
+
+.react-course-player__lesson.np {
+  font-weight: 600;
 }
